--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,19 @@
-.grid {
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: chocolate;
+}
+
+#grid-area {
     display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
+    background-color: white;
+    margin: 100px auto;
+}
+
+.cell {
+    border: 1px solid whitesmoke;
 }
