--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Comic Sans MS', Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: chocolate;
+    background-color: rgb(255, 199, 199);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,6 +19,10 @@ h1 {
 .button-container {
     display: flex;
     gap: 20px;
+}
+
+button {
+    padding: 0 5px;
 }
 
 #grid-area {
